--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,49 @@
 /* NavBar.css */
 
-nav {
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #599cc0;
+  padding: 10px;
+}
+
+.ecommerce-title {
+  margin: 0;
+  font-size: 24px;
+  margin-right: 20px;
+
+}
+
+.buttons-container button {
+  margin-right: 5px;
+  padding: 8px 12px;
+  background-color: #4d9575;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.buttons-container button:hover {
+  background-color: #e0e0e0;
+}
+
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
 }
 
-.ecommerce-title {
-  margin-top: 20px;
-}
-
-.buttons-container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
 .cart-widget-img {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
 }
 
 
 .logo-image {
-  width: 200px; /* Ajusta el tamaño de la imagen según tus necesidades */
-  margin-top: 10px; /* Ajusta el margen superior según tus necesidades */
+  width: 100px;
 }
+
