--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@
   align-items: center;
   background-color: #599cc0;
   padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 99%;
+  display: flex;
 }
+
 
 .ecommerce-title {
   margin: 0;
@@ -29,12 +35,15 @@
   background-color: #e0e0e0;
 }
 
-.App {
+
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  justify-content: center;
+  height: 25vh;
 }
+
 
 .cart-widget-img {
   width: 25px;
@@ -44,6 +53,10 @@
 
 
 .logo-image {
-  width: 100px;
+  width: 70px;
+}
+
+.app-container {
+  padding-top: 60px;
 }
 
